shipper/base/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: shipper:apps/Deployment:shipper/spce-shipper
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"shipper:apps/Deployment:shipper/spce-shipper","deployment.kubernetes.io/revision":"3"},"creationTimestamp":"2026-02-14T09:15:44Z","generation":5,"name":"spce-shipper","namespace":"shipper","resourceVersion":"6186589","uid":"ca12e550-3967-4470-b5fd-7b18346f3962"},"spec":{"progressDeadlineSeconds":600,"replicas":0,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"spce-shipper" [...]
    creationTimestamp: "2026-03-02T22:28:42Z"
    generation: 1
    name: spce-shipper
    namespace: shipper
    resourceVersion: "7131419"
    uid: 91fb1d48-8a75-49a6-8d9c-525f429d1259
  spec:
    progressDeadlineSeconds: 600
    replicas: 0
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: spce-shipper
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          cattle.io/timestamp: "2026-02-14T09:18:28Z"
        labels:
          app: spce-shipper
      spec:
        containers:
        - env:
          - name: ASPNETCORE_URLS
            value: http://+:8080
          - name: Kafka__BootstrapServers
            value: my-kafka-kafka-bootstrap.kafka.svc:9092
          - name: Kafka__ShipmentRequestsTopic
            value: shipment-requests
          - name: Kafka__ShipmentsTopic
            value: shipments
          - name: Kafka__ConsumerGroup
            value: spce-shipper
          image: abu7midan/spce-shipper:1.0
          imagePullPolicy: IfNotPresent
          name: spce-shipper
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    conditions:
    - lastTransitionTime: "2026-03-02T22:28:42Z"
      lastUpdateTime: "2026-03-02T22:28:42Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-03-02T22:28:42Z"
      lastUpdateTime: "2026-03-02T22:28:42Z"
      message: ReplicaSet "spce-shipper-69c86dc89d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
kind: List
metadata:
  resourceVersion: ""
