shipper/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: shipper:/Service:shipper/spce-shipper
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"shipper:/Service:shipper/spce-shipper"},"creationTimestamp":"2026-02-14T09:15:44Z","name":"spce-shipper","namespace":"shipper","resourceVersion":"6186574","uid":"0f8cb62f-3e5a-4151-8ec4-036891d22592"},"spec":{"clusterIP":"10.101.163.13","clusterIPs":["10.101.163.13"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"http","port":80,"proto [...]
    creationTimestamp: "2026-03-02T22:28:44Z"
    name: spce-shipper
    namespace: shipper
    resourceVersion: "7131445"
    uid: 27aa5bbd-7635-4b4d-ae23-907d3e75f9ce
  spec:
    clusterIP: 10.101.163.13
    clusterIPs:
    - 10.101.163.13
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: spce-shipper
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
